<resources>
    <string name="app_name">Tabs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>
    <string name="facebook_app_id">1649818601942342</string>

    <string name="profile">Profile</string>
    <string name="comments">Comments</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="publicString">Public</string>
    <string name="noPostsPublic">No posts in your area. Be the first one to help others discover what\'s going on in your area!</string>
    <string name="noPostsFollowing">No posts have been made by those you are following.</string>
    <string name="noPostsPosted">No posts.</string>
    <string name="noPostsPostedUser">This user has not made any posts.</string>
    <string name="noCommentsPostedUser">This user has not made any comments.</string>
    <string name="noPostsProfile">You have not made any posts yet.</string>
    <string name="noCommentsProfile">You have not made any comments yet.</string>
    <string name="noComments">No Comments.</string>
    <string name="noFollowersUser">This user has no followers.</string>
    <string name="noFollowingUser">This user is not following anyone.</string>
    <string name="noFollowingProfile">You are not following anyone.</string>
    <string name="noFollowersProfile">You have no followers yet.</string>
    <string name="permission_location_rationale">Location permission is needed to allow the application to work properly. Public posts are not viewable until Location Services are enabled.</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="commentBack">Comment back!</string>
    <string name="enableLocation">Enable Location</string>
    <string name="enableLocationDetails">Tabs needs your location in order to work properly. This will allow you to view posts around your current location.</string>
    <string name="permissions_not_granted">Location permissions were not granted.</string>
    <string name="gpsNetworkNotEnabled">Location services must be enabled to use Tabs. Would you like to enable it now?</string>
    <string name="openLocationSettings">Open Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="notFollowing">+ Follow</string>
    <string name="isFollowing">Following</string>
    <string name="createTitle">Title your post</string>
    <string name="createStatus">Post a status</string>
    <string name="crash_toast_text">Tabs has crashed. Please contact an administrator for more details.</string>
    <string name="plusFollow">+ Follow</string>
    <string name="spaceComments"> Comments</string>
    <string name="statusPlaceholder">What do you want to say?</string>
    <string name="titlePlaceholder">Title</string>
    <string name="findOutMessage">Welcome to Tabs. Login below to see what people are talking about around your area.</string>

</resources>
