<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/enable_location_layout"
    android:background="@drawable/background"
    android:layout_height="match_parent">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="16dp"
        android:id="@+id/enable_location_title"
        android:gravity="center_horizontal"
        android:text="@string/enableLocation"/>

    <TextView
        android:layout_width="match_parent"
        android:padding="16dp"
        android:textAlignment="center"
        android:id="@+id/enable_location_details"
        android:layout_below="@id/enable_location_title"
        android:layout_height="wrap_content"
        android:text="@string/enableLocationDetails"/>

    <ImageView
        android:layout_below="@id/enable_location_details"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/tabs_logo_picture"
        android:src="@drawable/ic_tabs_logo_transparent"/>

    <Button
        android:fontFamily="sans-serif"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:id="@+id/enable_location_ok_button"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/teal"
        android:textColor="@color/white"
        android:text="@string/ok"/>
</RelativeLayout>